--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,33 @@
+* {
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+  line-height: 25px;
+  color: #000;
+}
+body {
+  background: #f9ebd7;
+}
 .App {
   text-align: center;
   display: flex;
+  flex-direction: column;
+  width: 480px;
+  margin: 0 auto;
+}
+
+.Header{
+  padding:30px 0;
+  border-bottom: dotted red;
+  border-width: thick;
+}
+
+.Header h1{
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 15px;
 }
